Fixed the confirmation delete modal on mobile as it was off the screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -450,4 +450,10 @@ nav {
     .recent-post-carousel-item{
         width: 240px !important;
     }
+    .delete-modal-btn{
+        width: 100px;
+    }
+    .delete-cancel-btns-container {
+        margin-left: calc(50% - 100px);
+    }
 }
